--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -1,14 +1,18 @@
 .editor {
     display: flex;
     flex-flow: column nowrap;
+
+    width: 100%;
+    height: 100%;
 }
 
 .editor-tabs {
     display: flex;
     flex-flow: row nowrap;
-    flex: 1;
+    flex: 0;
+    order: 1;
 
-    min-height: 20px;
+    min-height: 24px;
 }
 
 .editor-tab {
@@ -23,11 +27,15 @@
 
 .editor-content {
     flex: 1;
+    order: 2;
 
     position: relative;
     font: 16px 'Fira Code', monospace;
 
     border-top: 1px solid black;
+
+    width: 100%;
+    height: 100%;
 }
 .editor-content:focus {
     outline: none;
