--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,4 +1,20 @@
+html {
+    padding: 0;
+    margin: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
 body {
     padding: 0;
     margin: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
 }
