--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -9,20 +9,17 @@
 .editor-tabs {
     display: flex;
     flex-flow: row nowrap;
-    flex: 0;
+    flex: 1;
     order: 1;
 
-    min-height: 24px;
+    font: 16px 'Cantarell';
+
+    max-height: 32px;
 }
 
 .editor-tab {
     min-width: 32px;
-    padding: 4px;
-
-    border-right: 1px solid black;
-}
-.editor-tab.active {
-    border-bottom: 2px solid aqua;
+    padding: 8px;
 }
 
 .editor-content {
@@ -36,6 +33,8 @@
 
     width: 100%;
     height: 100%;
+
+    overflow: hidden;
 }
 .editor-content:focus {
     outline: none;
