--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -20,6 +20,39 @@
 .editor-tab {
     min-width: 32px;
     padding: 8px;
+
+    cursor: default;
+}
+
+.editor-content-wrapper {
+    flex: 1;
+    order: 2;
+
+    border-top: 1px solid black;
+
+    display: flex;
+    flex-flow: row nowrap;
+
+    width: 100%;
+    height: 100%;
+
+    overflow: hidden;
+}
+
+.editor-line-numbers {
+    flex: 1;
+    order: 1;
+
+    font: 16px 'Fira Code';
+
+    text-align: right;
+
+    min-width: 48px;
+    max-width: 48px;
+}
+
+.editor-line-number {
+    padding-right: 12px;
 }
 
 .editor-content {
@@ -29,12 +62,10 @@
     position: relative;
     font: 16px 'Fira Code', monospace;
 
-    border-top: 1px solid black;
+    cursor: text;
 
     width: 100%;
     height: 100%;
-
-    overflow: hidden;
 }
 .editor-content:focus {
     outline: none;
