--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -17,7 +17,7 @@
     width: 100%;
     max-height: 32px;
 
-    z-index: 2;
+    z-index: 10;
 }
 
 .editor-tab {
@@ -31,7 +31,7 @@
     flex: 1;
     order: 2;
 
-    z-index: 1;
+    z-index: 9;
 
     position: relative;
 
@@ -54,6 +54,8 @@
 
     min-width: 48px;
     max-width: 48px;
+
+    z-index: 5;
 }
 
 .editor-line-number {
@@ -64,13 +66,15 @@
     flex: 1;
     order: 2;
 
-    position: relative;
+    position: absolute;
     font: 16px 'Fira Code', monospace;
 
     cursor: text;
 
     width: 100%;
     height: 100%;
+
+    z-index: 4;
 }
 .editor-content:focus {
     outline: none;
