--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -47,7 +47,8 @@
 
     background: none;
 }
-.editor-tab-close::before, .editor-tab-close::after {
+.editor-tab-close::before,
+.editor-tab-close::after {
     content: '';
     position: absolute;
     background-color: #878aa5;
@@ -124,4 +125,3 @@
 .editor-cursor {
     position: absolute;
 }
-
