Implement text selection (#23)

--- a/src/renderer/components/editor.css
+++ b/src/renderer/components/editor.css
@@ -125,3 +125,8 @@
 .editor-cursor {
     position: absolute;
 }
+
+.editor-cursor-selection {
+    position: absolute;
+    pointer-events: none;
+}
